tests/errors/semantic/blocking/INTERNAL_ERROR.py
# [INTERNAL ERROR] Pyccel has raised an internal error. Please check that your code executes correctly without raising any errors in Python. If this is the case then please create an issue at https://github.com/pyccel/pyccel/issues and include the traceback generated when running pyccel with the --developer-mode flag
# pylint: disable=missing-function-docstring, missing-module-docstring

a = 3 + 'non-valid Python expression'
